@@ -1,3 +1,8 @@
+2007-05-16  Shawn Betts  <sabetts@vcn.bc.ca>
+
+	* core.lisp (withdraw-window): unmap the parent window
+	(translate-id): remove debug output
+
 2007-05-14  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* mode-line.lisp (redraw-screen-mode-line): new function
